@@ -1,4 +1,9 @@
-﻿shmuel 09.03.2014 15:08:27 +0200 - build 3825
+﻿drkns 10.03.2014 01:08:07 +0200 - build 3826
+
+1. Очень старый баг, внесённый ещё в 2.0.1077.
+   В некоторых случаях оптимизация работала не так, как ожидалось, и становилось в разы медленнее.
+
+shmuel 09.03.2014 15:08:27 +0200 - build 3825
 
 1. Из форума: DI_FIXEDIT + DIF_HISTORY для строк больше двух символов.
    (Наличие флага DIF_HISTORY позволяло ввести на 1 символ больше, чем длина поля ввода).
